# python_multiplatform_console_app

./: main.py  pyproject.toml
.github/workflows/: package.yml
