[tool.poetry]
name = "python_multiplatform_console_app"
version = "0.1.0"
description = ""
authors = ["Marcin Wątroba <markowanga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
